package org.example.parcial1concurrente.rest;

public class ComponenteController {
}
